# bevy-in-app

./: .gitignore  Cargo.toml  README.md  ios_build.sh
crates/app/src/client/: mod.rs
iOS/bevy_in_iOS.xcodeproj/project.xcworkspace/xcuserdata/user265135.xcuserdatad/: UserInterfaceState.xcuserstate
src/: lib.rs
src/app_view/: app_views.rs  ios.rs  mod.rs
src/ffi/: ios.rs  mod.rs
