[package]
name = "bevy-in-app"
version = "0.3.0"
authors = ["jinleili"]
edition = "2021"
rust-version = "1.77"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[features]
# default = ["bevy_debug_stepping"]

[dependencies]
libc = "*"
raw-window-handle = "0.6"
uuid = { version = "1.7.0", features = ["v4"] }
log = "0.4"
ambient_app = {path = "../Ambient/crates/app"}
ambient = {path = "crates/app"}

[target.'cfg(target_os = "ios")'.dependencies]
core-graphics = "*"
objc = "*"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
jni = "0.21"
jni_fn = "0.1"
# 需要保持与 bevy 一致
ndk-sys = "0.4.1+23.1.7779620"
ndk = "0.7.0"
ndk-context = "*"
log-panics = "*"

[profile.dev]
opt-level = 1 # 1 for minimal optimization and good debugging.
